--- a/cthread/Makefile
+++ b/cthread/Makefile
@@ -15,21 +15,22 @@ LIB_DIR=./lib
 INC_DIR=./include
 BIN_DIR=./bin
 SRC_DIR=./src
+TST_DIR=./testes
 
-all: regra1
+all: objeto movetoBin gloriousLib movetoLib
 
-all2: regra1 regra2 regran
+objeto: $(SRC_DIR)/cthread.c $(INC_DIR)/cdata.h $(INC_DIR)/cthread.h $(INC_DIR)/support.h
+	$(CC) -c $(SRC_DIR)/cthread.c -Wall
 
-regra1: #dependências para a regra1
-	$(CC) -o $(BIN_DIR)/cthread_jao $(SRC_DIR)/cthread_jao.c -Wall
+movetoBin:
+	mv cthread.o $(BIN_DIR)
 
-regra2: #dependências para a regra2
-	$(CC) -o $(BIN_DIR)regra2 $(SRC_DIR)regra2.c -Wall
+gloriousLib:
+	ar crs libcthread.a $(BIN_DIR)/*.o
 
-regran: #dependências para a regran
-	$(CC) -o $(BIN_DIR)regran $(SRC_DIR)regran.c -Wall
+movetoLib:
+	mv libcthread.a $(LIB_DIR)
 
 clean:
-	rm -rf $(LIB_DIR)/*.a $(BIN_DIR)/*.o $(SRC_DIR)/*~ $(INC_DIR)/*~ *~
-
+	rm -rf $(BIN_DIR)/cthread.o $(LIB_DIR)/libcthread.a
 
